fixed commenter avatar alignment issue

--- a/sass/_comments.scss
+++ b/sass/_comments.scss
@@ -43,7 +43,7 @@
   }
   img {
     float: left;
-    margin-right: $baseline-height / 2;
+    margin: 0 $baseline-height / 2 0 0;
     height: $baseline-height * 1.5;
     width: $baseline-height * 1.5;
   }
