--- a/style.css
+++ b/style.css
@@ -585,7 +585,7 @@ a img {
 }
 .comment-author img {
   float: left;
-  margin-right: 0.75em;
+  margin: 0 0.75em 0 0;
   height: 2.25em;
   width: 2.25em;
 }
